--- a/index.html
+++ b/index.html
@@ -7,18 +7,32 @@
     <script>
         function solusiAndrew() {
             let pilihan = document.getElementById("pilihan").value;
-            let cash = 0;
+            let cash = 0;  // Simulasi belum gajian
             let pinjol = true;
             let card = false;
             let hasil;
 
-            if (cash >= 1 || card) {
-                hasil = "no " + pilihan.toLowerCase();
+            if (pilihan === "Healing") {
+                hasil = "Andrew ajak Sabrina dan Hadi pergi ke Hualien untuk healing.";
+            } else if (cash < 1) {
+                hasil = "Andrew minta uang ke Hadi 50,000 NTD karena belum gajian.";
+            } else if (pilihan === "Bosan di rumah") {
+                hasil = "Andrew pergi keluar rumah saat taifun karena bosan di rumah.";
+            } else if (cash >= 1 || card) {
+                hasil = "Andrew bisa beli " + pilihan.toLowerCase();
             } else {
-                hasil = "ngutang Harry untuk " + pilihan.toLowerCase();
+                hasil = "Andrew ngutang Harry untuk " + pilihan.toLowerCase();
             }
 
             document.getElementById("hasil").innerHTML = hasil;
+            putarVideo();  // Putar video setelah solusi keluar
+        }
+
+        function putarVideo() {
+            let video = document.getElementById("videoHealing");
+            video.style.display = "block";
+            video.play();
+            video.loop = true;  // Video diputar terus menerus
         }
     </script>
 </head>
@@ -29,9 +43,16 @@
         <option value="Macbook">Andrew lagi butuh Macbook</option>
         <option value="Ipad">Andrew lagi butuh Ipad</option>
         <option value="Healing">Andrew lagi butuh Healing</option>
+        <option value="Bosan di rumah">Andrew bosan di rumah</option>
     </select>
     <br><br>
     <button onclick="solusiAndrew()">Klik untuk mengetahui solusinya</button>
     <p id="hasil"></p>
+    
+    <!-- Video healing -->
+    <video id="videoHealing" width="320" height="240" style="display:none" controls>
+        <source src="/mnt/data/WhatsApp Video 2024-10-02 at 13.51.11.mp4" type="video/mp4">
+        Browser Anda tidak mendukung tag video.
+    </video>
 </body>
 </html>
